Refactor entity classes and improve security configurations. Consolidated annotations in LogEntry and User entities, updated column names for clarity, and enhanced JWT authentication logic. Added log review functionality in LogEntryService and SupervisorService with validation checks.